more fixes to ordered lists on mobile

--- a/css/blog-entry-media-queries.css
+++ b/css/blog-entry-media-queries.css
@@ -27,6 +27,20 @@ ul>li>ul>li {
     font-size: 0.9em;
 }
 
+ol>li {
+    width: 85%;
+    margin: 0 auto;
+    font-size: 1.2em;
+}
+
+ol>li>ol>li {
+    width: 90%;
+    margin: 0 auto;
+    font-size: 0.9em;
+}
+
+
+
 }
 
 /*
@@ -47,6 +61,20 @@ ul>li>ul>li {
     font-size: 0.9em;
 }
 
+ol>li {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 1.2em;
+}
+
+ol>li>ol>li {
+    width: 90%;
+    margin: 0 auto;
+    font-size: 0.9em;
+}
+
+
+
 }
 
 @media only screen and (max-width : 560px) {
@@ -62,6 +90,22 @@ ul>li>ul>li {
     margin: 0 auto;
     font-size: 0.9em;
 }
+
+ol>li {
+    width: 80%;
+    margin: 0 auto;
+    font-size: 1.1em;
+}
+
+ol>li>ol>li {
+    width: 90%;
+    margin: 0 auto;
+    font-size: 0.9em;
+}
+
+}
+
+
 
 }
 
